salesforce/force-app/main/default/objects/Account/fields/Customer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR__c</fullName>
    <description>Gives commercial significance and can later support weighted prioritization. For the demo this can be synthetic.</description>
    <label>Customer ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>