salesforce/force-app/main/default/objects/Account/fields/Customer_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Score__c</fullName>
    <description>Optional contextual input from 0–100. Useful later, but I would not make the AI depend on it initially.</description>
    <label>Customer Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>