salesforce/force-app/main/default/objects/Account/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Parent business account Id which is unique across the company</inlineHelpText>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>