salesforce/force-app/main/default/objects/Account/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique branch or location Id across the company</inlineHelpText>
    <label>Location Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>