salesforce/force-app/main/default/objects/Account/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <description>Prevents closed/inactive locations from contaminating branch-level signals.</description>
    <label>Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Temporarily Closed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>