salesforce/force-app/main/default/objects/Account/fields/Platform_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Platform_Go_Live_Date__c</fullName>
    <description>Allows tenure-based logic. A customer live for 20 days should not necessarily receive the same recommendations as one live for three years.</description>
    <label>Platform Go-Live Date</label>
    <type>Date</type>
</CustomField>