salesforce/force-app/main/default/objects/Account/fields/Revenue_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Weight__c</fullName>
    <description>Lets cross-location aggregation distinguish a small branch from a location representing a large share of the business.</description>
    <label>Revenue Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>