salesforce/force-app/main/default/objects/Account/fields/Service_Verticals__c.field-meta.xml
<CustomField>
    <fullName>Service_Verticals__c</fullName>
    <description>Identifies the customer’s operating vertical, e.g. HVAC, Plumbing, Electrical, Roofing, Multi-Trade. Useful for product-fit and recommendation rules.</description>
    <label>Service Verticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Multi-Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>