salesforce/force-app/main/default/objects/Account/fields/Technician_Count__c.field-meta.xml
<CustomField>
    <fullName>Technician_Count__c</fullName>
    <description>Useful operational size indicator for home-services businesses and later recommendation weighting.</description>
    <label>Technician Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>