salesforce/force-app/main/default/objects/Account/recordTypes/Field_Pilot.recordType-meta.xml
<RecordType>
    <fullName>Field_Pilot</fullName>
    <active>true</active>
    <label>Field Pilot</label>
</RecordType>